Bug#39519: mysql_stmt_close() should flush all data associated with the statement.